--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -31,29 +33,75 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    let fifteens = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599)
+    console.table(fifteens)
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    let fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`)
+    console.log(fullNames)
 
     // Array.prototype.sort()
-    // 3. Sort the inventors by birthdate, oldest to youngest
+    // // 3. Sort the inventors by birthdate, oldest to youngest
+    // let ordered = inventors.sort(function (a, b) {
+    //   if (a.year > b.year) {
+    //     return 1
+    //   } else {
+    //     return -1
+    //   }
+    // })
+
+    let ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1)
+    console.table(ordered)
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    let totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year)
+    }, 0)
+    console.log(totalYears)
 
     // 5. Sort the inventors by years lived
+    let oldest = inventors.sort(function (a, b) {
+      let first = a.passed - a.year;
+      let next = b.passed = b.year;
+      return first > next ? -1 : 1
+    })
+    console.table(oldest)
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // let category = document.querySelector('.mw-category');
+    // let links = Array.from(category.querySelectorAll('a'));
+    // // OR
+    // // let links = [...category.querySelectorAll('a')];
+    // let de = links
+    //   .map(link => link.textContent)
+    //   .filter(streetName => streetName.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    let alpha = people.sort(function (lastOne, nextOne) {
+      let [aLast, aFirst] = lastOne.split(' ');
+      let [bLast, bFirst] = nextOne.split(' ');
+      return aLast > bLast ? 1 : -1;
+    })
+    console.log(alpha)
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
 
+    let transportation = data.reduce(function (obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+      obj[item]++;
+      return obj;
+    }, {})
+    console.log(transportation)
   </script>
 </body>
+
 </html>
